# FinkokoBot

./: .gitignore  Procfile  README.md  aliases.py  db.py  db_DEPRECATED.py  exceptions.py  formatters.py  pg_db.py  pyproject.toml  requirements.txt  schema.sql  server.py
bot/: aliases.py  db_DEPRECATED.py  exceptions.py  formatters.py  pg_db.py  pg_schema.sql  server.py
test/: db_script.py
